# Engine_3D_EGE_Class

./: Engine_3D.sln  README.en.md  README.md
Engine_3D/: CMakeLists.txt  Engine_3D.cpp  Engine_3D.vcxproj  Engine_3D.vcxproj.filters  Makefile  scene.json
Engine_3D/common/: EPoint.h  MultiLink.h  MultiLinkLocal.cpp  MultiLinkLocal.h
Engine_3D/flatform/: Device.h  Drawable.cpp  ELibrary.h  EPaint.h
Engine_3D/math3d/: Camera3D.h  Camera3D_funcs.h  Light3D.h  Manager3D.h  Mat3D.h  Object3D.h  Object3D_funcs.h  Texture.cpp  Texture.h  Texture3D.h  Vert3D.h
Engine_3D/raytracing/: Ray.h  aabb.h  bvh.h  camere.h  hittable.h  hittable_list.h  material.h  sphere.h
Engine_3D/reader/: 3DS.cpp  OBJ.cpp
